src/components/Transition/transition.css
.slide-in {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-image: linear-gradient(to bottom, #f4f4f5 0vh, #d4d4d8 100vh);
    z-index: 99;
    border-radius: 40px 40px 0 0;
    box-shadow: 0px -20px 50px rgba(0, 0, 0, 0.2);
}

.slide-out {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-image: linear-gradient(to top, #f4f4f5 0vh, #d4d4d8 100vh);
    z-index: 99;
    border-radius: 0 0 40px 40px;
    box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.2);
}

.pathname {
    position: fixed;
    width: fit-content;
    height: fit-content;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    color: var(--theme-color);
    cursor: default;
    font-size: 2.5rem;
    font-weight: 500;
    letter-spacing: 2px;
    z-index: 100;
    pointer-events: none;
}

